--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@ IEEE International Conference on Image Processing
    <div class="active item">
 
              <ul>
-            <li>AAAI - 2023</li>
-            <li>COMSNETS - 2023</li>
+            <li>AAAI-2023</li>
+            <li>COMSNETS-2023</li>
             <li>Computer Vision and Image Understanding (CVIU)</li>
             <li>IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</li>
             <li>IEEE Transactions on Industrial Electronics</li>
