added review paper

--- a/index.html
+++ b/index.html
@@ -120,6 +120,32 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
 <!-- Publication Entry -->
 <table>
 
+  <tr>
+<td>
+ <img src="./paper_imgs/slam_graph.png" width="200px"  alt="Gallery">
+&nbsp &nbsp &nbsp
+</td>
+<td>
+<div class="publication-title">
+  A Review on Monocular Tracking and Mapping: From Model-Based to Data-Driven Methods
+</div>
+  
+  Gadipudi, Nivesh, Irraivan Elamvazuthi, Lila Iznita Izhar, Lokender Tiwari, Ramya Hebbalaguppe, Cheng-Kai Lu, and Arockia Selvakumar Arockia Doss. "A review on monocular tracking and mapping: from model-based to data-driven methods." The Visual Computer (2022): 1-28.
+  
+<div class="publication-authors">
+  Nivesh Gadipudi, Irraivan Elamvazuthi, Lila Iznita Izhar, <u>Lokender Tiwari</u>, Ramya Hebbalaguppe, Cheng-Kai Lu, and Arockia Selvakumar Arockia Doss
+</div>
+<div class="publication-conf">
+  The Visual Computer <br> 
+<b>2022</b>
+</div>
+<div class="publication-links"
+  <a href="https://link.springer.com/article/10.1007/s00371-022-02702-z">PDF</a> 
+</div>
+</td>
+</tr>
+  
+  
 <tr>
 <td>
  <img src="./paper_imgs/garsim_wacv_main.gif" width="200px"  alt="Gallery">
