--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
 <h2 id="collaborators-and-interns">Collaborators and Interns</h2>
 <ul>
   <li><a href="https://www.linkedin.com/in/suraj-patni/">Suraj Patni</a> (MS Research AI) at <a href="https://home.iitd.ac.in/">IIT-Delhi</a>  with <a href="https://www.cse.iitd.ac.in/~chetan/">Dr. Chetan Arora</a></li>
-  <li><a href="https://www.linkedin.com/in/karantanwar/">Karan Tanwar</a> (B.Tech and M.Tech CSE Dual Degree) at <a href="https://home.iitd.ac.in/">IIT-Delhi</a> with <a href="https://www.cse.iitd.ac.in/~chetan/">Dr. Chetan Arora</a> (now at Amazon)</li>
+  <li><a href="https://www.linkedin.com/in/karantanwar/">Karan Tanwar</a> (B.Tech and M.Tech CSE Dual Degree) at <a href="https://home.iitd.ac.in/">IIT-Delhi</a> with <a href="https://www.cse.iitd.ac.in/~chetan/">Dr. Chetan Arora</a> </li>
+   <ul>
+     <li> (now SDE at Amazon)
+     </li>
+  </ul>
   <li><a href="https://anishmadan23.github.io/">Anish Madan</a> (B.Tech CSAM) at <a href="https://www.iiitd.edu.in/">IIIT-Delhi</a> with  <a href="https://faculty.iiitd.ac.in/~anands/"> Dr. Saket Anand</a>  (now Research Fellow at <a href="https://www.wadhwaniai.org/"> Wadhwani AI</a> )</li>
 </ul>
 
@@ -160,8 +164,8 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
   Nivesh Gadipudi, Irraivan Elamvazuthi, Lila Iznita Izhar, <u>Lokender Tiwari</u>, Ramya Hebbalaguppe, Cheng-Kai Lu, and Arockia Selvakumar Arockia Doss
 </div>
 <div class="publication-conf">
-  The Visual Computer <br> 
-<b>2022</b>
+  <b>The Visual Computer, 2022</b> <br> 
+
 </div>
 <div class="publication-links"
   <a href="https://link.springer.com/article/10.1007/s00371-022-02702-z">PDF</a> 
