--- a/index.html
+++ b/index.html
@@ -112,10 +112,14 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
   <li><a href="https://www.linkedin.com/in/suraj-patni/">Suraj Patni</a> (MS Research AI) at <a href="https://home.iitd.ac.in/">IIT-Delhi</a>  with <a href="https://www.cse.iitd.ac.in/~chetan/">Dr. Chetan Arora</a></li>
   <li><a href="https://www.linkedin.com/in/karantanwar/">Karan Tanwar</a> (B.Tech and M.Tech CSE Dual Degree) at <a href="https://home.iitd.ac.in/">IIT-Delhi</a> with <a href="https://www.cse.iitd.ac.in/~chetan/">Dr. Chetan Arora</a> </li>
    <ul>
-     <li> (now SDE at Amazon)
+     <li> now SDE at Amazon
      </li>
   </ul>
-  <li><a href="https://anishmadan23.github.io/">Anish Madan</a> (B.Tech CSAM) at <a href="https://www.iiitd.edu.in/">IIIT-Delhi</a> with  <a href="https://faculty.iiitd.ac.in/~anands/"> Dr. Saket Anand</a>  (now Research Fellow at <a href="https://www.wadhwaniai.org/"> Wadhwani AI</a> )</li>
+  <li><a href="https://anishmadan23.github.io/">Anish Madan</a> (B.Tech CSAM) at <a href="https://www.iiitd.edu.in/">IIIT-Delhi</a> with  <a href="https://faculty.iiitd.ac.in/~anands/"> Dr. Saket Anand</a>  </li>
+   <ul>
+     <li> now Research Fellow at <a href="https://www.wadhwaniai.org/"> Wadhwani AI</a> 
+     </li>
+  </ul>
 </ul>
 
 
