--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
   Nivesh Gadipudi, Irraivan Elamvazuthi, Lila Iznita Izhar, <u>Lokender Tiwari</u>, Ramya Hebbalaguppe, Cheng-Kai Lu, and Arockia Selvakumar Arockia Doss
 </div>
 <div class="publication-conf">
-  <b>The Visual Computer, 2022</b> <br> 
+  <b>The Visual Computer,International Journal of Computer Graphics, Springer, 2022</b> <br> 
 
 </div>
 <div class="publication-links"
