GarSim WACV2023  Links Added

--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@ Checkout my research group's publications at <a href="https://viscomputing.githu
 <b>WACV, 2023</b>
 </div>
 <div class="publication-links">
-  PDF and Project Page Coming Soon
-<!--   <a href="https://lokender.github.io/REGroup.html">Project</a> | 
-                      <a href="https://arxiv.org/pdf/2006.10679.pdf">PDF Author Version</a> |
-                    <a href="https://github.com/lokender/REGroup" target="_blank">Code</a> -->
+   <a href="https://openaccess.thecvf.com/content/WACV2023/papers/Tiwari_GarSim_Particle_Based_Neural_Garment_Simulator_WACV_2023_paper.pdf">PDF</a> | 
+                      <a href="https://openaccess.thecvf.com/content/WACV2023/supplemental/Tiwari_GarSim_Particle_Based_WACV_2023_supplemental.zip">Supplimentary PDF+Video</a> |
+                    <a href="https://www.youtube.com/watch?v=OpMDoM4Zj1A" target="_blank">Short Talk</a> 
 </div>
 </td>
 </tr>
