--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <a href="https://phd.dic.gov.in/" target="_blank" rel="external nofollow noopener">Visvesvarya Ph.D. Fellowship</a> award, Jul 2014- Dec 2019</li>
 <li>MHRD Graduate Fellowship, GATE (Top 4% in India), Jul 2012- Jun 2014</li>
 <li>
-<a href="https://lokender.github.io/gold.html" target="_blank" rel="external nofollow noopener">Chancellor's Gold Medal</a> for academic excellence in undergraduate B.Tech CSE., 2008-2012</li> </ul>
+<a href="https://lokender.github.io/photos/#gold" target="_blank" rel="external nofollow noopener">Chancellor's Gold Medal</a> for academic excellence in undergraduate B.Tech CSE., 2008-2012</li> </ul>
 
 <hr>
 
