--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
 
 <h2 id="news">News</h2>
 <ul> 
-<li>[2022] One US Patent #11,468,585 granted. </li>
+  <li>[2023] One paper accepted to <a href="https://CVPR2023.thecvf.com/home" rel="external nofollow noopener" target="_blank"> CVPR, 2023, Deep Learning for Geometric Computing</a> </li>
+  <li>[2022] One US Patent #11,468,585 granted. </li>
   <li>[2022] One paper accepted to <a href="https://wacv2023.thecvf.com/home" rel="external nofollow noopener" target="_blank"> IEEE WACV, 2023</a> </li>
   <li>[2022] Serving Programm Committee Member for the <a href="https://aaai.org/Conferences/AAAI-23/" rel="external nofollow noopener" target="_blank"> AAAI, 2023</a> </li>
   <li>[2022] Serving Technical Programm Committee Member for the <a href="https://www.comsnets.org/cvad_workshop.html" rel="external nofollow noopener" target="_blank"> Connected Vehicles and Autonomous Driving </a> at <a href="https://www.comsnets.org/" rel="external nofollow noopener" target="_blank"> COMSNETS, 2023</a> </li>
