--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </div>
 
           <div class="clearfix">
-            <p>I am a Research Scientist at Visual Computing Group, <a href="https://www.tcs.com/tcs-research" rel="external nofollow noopener" target="_blank">TCS Research</a>. Prior to joining TCS Research, I worked at <a href="https://www.nec-labs.com/research-departments/media-analytics/media-analytics-people" rel="external nofollow noopener" target="_blank">NEC Laboratories America</a>, with <a href="https://www.nec.com/en/global/rd/special/pinnacle/manmohan_chandraker.html" rel="external nofollow noopener" target="_blank">Prof. Manmohan Chandraker</a>, <a href="https://www.linkedin.com/in/quochuytran" rel="external nofollow noopener" target="_blank">Dr. Quoc-Huy Tran</a>, and <a href="https://sites.google.com/view/panji530" rel="external nofollow noopener" target="_blank">Dr. Pan Ji</a> on <a href="https://lokender.github.io/projects/pseudo-rgbd-slam/" rel="external nofollow noopener" target="_blank">self-improving framework for SLAM</a>. I received my PhD from <a href="https://www.iiitd.edu.in/" rel="external nofollow noopener" target="_blank">IIIT-Delhi</a>, with the Doctoral Dissertation Award. I was advised by <a href="https://faculty.iiitd.ac.in/~anands/index.html/" rel="external nofollow noopener" target="_blank">Dr. Saket Anand</a> and funded by prestegious <a href="https://phd.dic.gov.in/" rel="external nofollow noopener" target="_blank">Visvesvarya PhD fellowship</a>. I am the recipient of <a href="https://lokender.github.io/photos/#gold" target="_blank" rel="external nofollow noopener">Chancellor’s Gold Medal</a> for academic excellence in B.Tech (Computer Science and Engineering) 2008-2012.</p>
+            <p>I am a Research Scientist, I lead Visual Computing Group, @ <a href="https://www.tcs.com/tcs-research" rel="external nofollow noopener" target="_blank">TCS Research</a>. Prior to joining TCS Research, I worked at <a href="https://www.nec-labs.com/research-departments/media-analytics/media-analytics-people" rel="external nofollow noopener" target="_blank">NEC Laboratories America</a>, with <a href="https://www.nec.com/en/global/rd/special/pinnacle/manmohan_chandraker.html" rel="external nofollow noopener" target="_blank">Prof. Manmohan Chandraker</a>, <a href="https://www.linkedin.com/in/quochuytran" rel="external nofollow noopener" target="_blank">Dr. Quoc-Huy Tran</a>, and <a href="https://sites.google.com/view/panji530" rel="external nofollow noopener" target="_blank">Dr. Pan Ji</a> on <a href="https://lokender.github.io/projects/pseudo-rgbd-slam/" rel="external nofollow noopener" target="_blank">self-improving framework for SLAM</a>. I received my PhD from <a href="https://www.iiitd.edu.in/" rel="external nofollow noopener" target="_blank">IIIT-Delhi</a>, with the Doctoral Dissertation Award. I was advised by <a href="https://faculty.iiitd.ac.in/~anands/index.html/" rel="external nofollow noopener" target="_blank">Dr. Saket Anand</a> and funded by prestegious <a href="https://phd.dic.gov.in/" rel="external nofollow noopener" target="_blank">Visvesvarya PhD fellowship</a>. I am the recipient of <a href="https://lokender.github.io/photos/#gold" target="_blank" rel="external nofollow noopener">Chancellor’s Gold Medal</a> for academic excellence in B.Tech (Computer Science and Engineering) 2008-2012.</p>
 
 <ul> <b>email</b> : lokender [dot] tiwari [@] tcs [dot] com , tiwarilokender [@] gmail [dot] com </ul>
 <ul>  <b>Research Interests</b>: I actively research in the following areas 
@@ -165,26 +165,24 @@
 
 <h2 id="news">News</h2>
 <ul> 
+https://www.comsnets.org/cvad_workshop.html
+  <li>[2024] Serving Workshop Co-Chair for the <a href="https://www.comsnets.org/cvad_workshop.html" rel="external nofollow noopener" target="_blank"> Connected Vehicles and Autonomous Driving </a> at <a href="https://www.comsnets.org/" rel="external nofollow noopener" target="_blank"> COMSNETS, 2024</a> </li>
   <li>[2023] One paper accepted to <a href="https://CVPR2023.thecvf.com/home" rel="external nofollow noopener" target="_blank"> CVPR, 2023, Deep Learning for Geometric Computing (<b>Oral</b>) </a> </li>
   <li>[2022] One US Patent #11,468,585 granted. </li>
   <li>[2022] One paper accepted to <a href="https://wacv2023.thecvf.com/home" rel="external nofollow noopener" target="_blank"> IEEE WACV, 2023</a> </li>
   <li>[2022] Serving Programm Committee Member for the <a href="https://aaai.org/Conferences/AAAI-23/" rel="external nofollow noopener" target="_blank"> AAAI, 2023</a> </li>
   <li>[2022] Serving Technical Programm Committee Member for the <a href="https://www.comsnets.org/cvad_workshop.html" rel="external nofollow noopener" target="_blank"> Connected Vehicles and Autonomous Driving </a> at <a href="https://www.comsnets.org/" rel="external nofollow noopener" target="_blank"> COMSNETS, 2023</a> </li>
-   <details>
-  <summary>Show more...</summary>
   <li>[2022] One paper accepted to <a href="https://wacv2022.thecvf.com/home" rel="external nofollow noopener" target="_blank"> IEEE WACV, 2022</a> </li>
   <li>[2021] 3D Virtual Garment Try-on (DeepDraper) accepted in the <a href="http://iccv2021.thecvf.com/" rel="external nofollow noopener" target="_blank"> ICCV, 2021 </a> <a href="http://montrealrobotics.ca/diff3d/" rel="external nofollow noopener" target="_blank"> Workshop</a> </li>
-  <li>[2021] Keynote talk on <i>Robust Scene Understanding</i> at the <a href="https://www.bitdurg.ac.in/bitcon2021/keynotes.html" rel="external nofollow noopener" target="_blank">BITCON, 2021</a>
-</li>
+  <li>[2021] Keynote talk on <i>Robust Scene Understanding</i> at the <a href="https://www.bitdurg.ac.in/bitcon2021/keynotes.html" rel="external nofollow noopener" target="_blank">BITCON, 2021</a></li>
   <li>[2020] Self-improving SLAM and Depth Predictions accepted in <a href="https://eccv2020.eu/" target="_blank" rel="external nofollow noopener">ECCV 2020</a> </li>
-  <li>[2020] <i>REGroup</i>. A test time replacement of Softmax for robust predictions, <a href="https://lokender.github.io/REGroup.html" target="_blank" rel="external nofollow noopener">Project Page</a>
-</li> 
-</details>
+  <li>[2020] <i>REGroup</i>. A test time replacement of Softmax for robust predictions, <a href="https://lokender.github.io/REGroup.html" target="_blank" rel="external nofollow noopener">Project Page</a></li> 
 </ul>
 
 <hr>
 
 <h2 id="talks">Invited Talks/Keynotes</h2>
+<ul> <li> [<b>Dec, 2023</b>] Invited Guest Judge for the <i>Project Showcase Event</i>  at  <a href="https://www.bennett.edu.in/" rel="external nofollow noopener" target="_blank"> Bennett University</a> </li>
 <ul> <li> [<b>Jan, 2023</b>] Invited talk on <i>Robust Scene Understanding</i>  at  <a href="https://lu.ma/kdmdelhincr43" rel="external nofollow noopener" target="_blank"> 43rd Kaggle Days Meetup Delhi-NCR</a> </li>
 <li> [<b>Nov, 2022</b>] Invited talk on <i>Simultaneous Localization and Mapping (Classical to Leaning Based)</i>  at  <a href="https://www.cse.iitd.ac.in" rel="external nofollow noopener" target="_blank"> IIT-Delhi</a> hosted by <a href="https://www.cse.iitd.ac.in/~chetan/" rel="external nofollow noopener" target="_blank"> </a> Prof. Chetan Arora </li>
 <li> [<b>Oct, 2022</b>] Invited talk on <i>Metaverse: Current and The Future, a Visual Computing Perspective</i>  at  <a href="https://sushantuniversity.edu.in/school-of-engineering-and-technology" rel="external nofollow noopener" target="_blank"> Sushant University</a>
@@ -194,9 +192,11 @@
 </ul>
 
 <hr>
-
 <h2 id="awards">Awards</h2>
-<ul> <li> Received <a href="https://www.flipbookpdf.net/web/site/593a0d5023e74e15c0b902e4cd702ae406d83c0aFBP23162779.pdf.html#page/33" rel="external nofollow noopener" target="_blank"> Ph.D. Dissertation Award, 2021</a>
+<ul> 
+<li> Received Young Scientist Research Award, 2023.</a>
+</li>
+  <li> Received <a href="https://www.flipbookpdf.net/web/site/593a0d5023e74e15c0b902e4cd702ae406d83c0aFBP23162779.pdf.html#page/33" rel="external nofollow noopener" target="_blank"> Ph.D. Dissertation Award, 2021</a>
 </li>
 <li>
 <a href="http://wacv18.uccs.us/" target="_blank" rel="external nofollow noopener">IEEE WACV 2018</a> Ph.D. Forum Award. <b>Mentor:</b> Prof. <a href="https://vast.uccs.edu/~tboult/" target="_blank" rel="external nofollow noopener">Terrance Boult</a>
