--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <li>[2022] One US Patent on Pseudo-RGBD SLAM and Depth Prediction has been <a href="https://patents.google.com/patent/US11468585B2/" target="_blank"> granted </a>. </li>
   <li>[2022] One paper accepted to <a href="https://wacv2023.thecvf.com/home" rel="external nofollow noopener" target="_blank"> IEEE WACV, 2023</a> </li>
   <li>[2022] Serving Programm Committee Member for the <a href="https://aaai.org/Conferences/AAAI-23/" rel="external nofollow noopener" target="_blank"> AAAI, 2023</a> </li>
-  <li>[2022] Serving Technical Programm Committee Member for the <a href="https://www.comsnets.org/cvad_workshop.html" rel="external nofollow noopener" target="_blank"> Connected Vehicles and Autonomous Driving </a> at <a href="https://www.comsnets.org/" rel="external nofollow noopener" target="_blank"> COMSNETS, 2023</a> </li>
+<!--   <li>[2022] Serving Technical Programm Committee Member for the <a href="https://www.comsnets.org/cvad_workshop.html" rel="external nofollow noopener" target="_blank"> Connected Vehicles and Autonomous Driving </a> at <a href="https://www.comsnets.org/" rel="external nofollow noopener" target="_blank"> COMSNETS, 2023</a> </li> -->
   <li>[2022] One paper accepted to <a href="https://wacv2022.thecvf.com/home" rel="external nofollow noopener" target="_blank"> IEEE WACV, 2022</a> </li>
   <li>[2021] 3D Virtual Garment Try-on (DeepDraper) accepted in the <a href="http://iccv2021.thecvf.com/" rel="external nofollow noopener" target="_blank"> ICCV, 2021 </a> <a href="http://montrealrobotics.ca/diff3d/" rel="external nofollow noopener" target="_blank"> Workshop</a> </li>
   <li>[2021] Keynote talk on <i>Robust Scene Understanding</i> at the <a href="https://www.bitdurg.ac.in/bitcon2021/keynotes.html" rel="external nofollow noopener" target="_blank">BITCON, 2021</a></li>
@@ -182,8 +182,9 @@
 <hr>
 
 <h2 id="talks">Invited Talks/Keynotes</h2>
-<ul> <li> [<b>Dec, 2023</b>] Invited Guest Judge for the <i>Project Showcase Event</i>  at  <a href="https://www.bennett.edu.in/" rel="external nofollow noopener" target="_blank"> Bennett University</a> </li>
-<ul> <li> [<b>Jan, 2023</b>] Invited talk on <i>Robust Scene Understanding</i>  at  <a href="https://lu.ma/kdmdelhincr43" rel="external nofollow noopener" target="_blank"> 43rd Kaggle Days Meetup Delhi-NCR</a> </li>
+<ul> 
+<li> [<b>Dec, 2023</b>] Invited Guest Judge for the <i>Project Showcase Event</i>  at  <a href="https://www.bennett.edu.in/" rel="external nofollow noopener" target="_blank"> Bennett University</a> </li>
+<li> [<b>Jan, 2023</b>] Invited talk on <i>Robust Scene Understanding</i>  at  <a href="https://lu.ma/kdmdelhincr43" rel="external nofollow noopener" target="_blank"> 43rd Kaggle Days Meetup Delhi-NCR</a> </li>
 <li> [<b>Nov, 2022</b>] Invited talk on <i>Simultaneous Localization and Mapping (Classical to Leaning Based)</i>  at  <a href="https://www.cse.iitd.ac.in" rel="external nofollow noopener" target="_blank"> IIT-Delhi</a> hosted by <a href="https://www.cse.iitd.ac.in/~chetan/" rel="external nofollow noopener" target="_blank"> </a> Prof. Chetan Arora </li>
 <li> [<b>Oct, 2022</b>] Invited talk on <i>Metaverse: Current and The Future, a Visual Computing Perspective</i>  at  <a href="https://sushantuniversity.edu.in/school-of-engineering-and-technology" rel="external nofollow noopener" target="_blank"> Sushant University</a>
 </li>
