--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 
 <h2 id="news">News</h2>
 <ul> 
+  <li>[2024] Co-organized  <a href="https://3dvss.github.io/" target="_blank"> 3D Vision Summer School 2024</a> at <a href="https://iiitb.ac.in/" rel="external nofollow noopener" target="_blank"> IIIT-Bangalore</a> </li>
   <li>[2024] Serving Workshop Co-Chair for the <a href="https://www.comsnets.org/cvad_workshop.html" rel="external nofollow noopener" target="_blank"> Connected Vehicles and Autonomous Driving Workshop</a> at <a href="https://www.comsnets.org/" rel="external nofollow noopener" target="_blank"> COMSNETS, 2024</a> </li>
   <li>[2023] One US Patent on 3D Garment Draping on 3D Human Body has been <a href="https://patents.google.com/patent/US11778162B2/" target="_blank"> granted </a>.</li>
   <li>[2023] One paper accepted to <a href="https://CVPR2023.thecvf.com/home" rel="external nofollow noopener" target="_blank"> CVPR, 2023, Deep Learning for Geometric Computing (<b>Oral</b>) </a> </li>
@@ -183,6 +184,7 @@
 
 <h2 id="talks">Invited Talks/Keynotes</h2>
 <ul> 
+<li> [<b>May, 2024</b>] Invited talk on <i>Unboxing Deep Neural Networks using Information Theory</i>  at  <a href="https://vit.ac.in/" rel="external nofollow noopener" target="_blank"> VIT- Vellore</a> </li>
 <li> [<b>Dec, 2023</b>] Invited Guest Judge for the <i>Project Showcase Event</i>  at  <a href="https://www.bennett.edu.in/" rel="external nofollow noopener" target="_blank"> Bennett University</a> </li>
 <li> [<b>Jan, 2023</b>] Invited talk on <i>Robust Scene Understanding</i>  at  <a href="https://lu.ma/kdmdelhincr43" rel="external nofollow noopener" target="_blank"> 43rd Kaggle Days Meetup Delhi-NCR</a> </li>
 <li> [<b>Nov, 2022</b>] Invited talk on <i>Simultaneous Localization and Mapping (Classical to Leaning Based)</i>  at  <a href="https://www.cse.iitd.ac.in" rel="external nofollow noopener" target="_blank"> IIT-Delhi</a> hosted by <a href="https://www.cse.iitd.ac.in/~chetan/" rel="external nofollow noopener" target="_blank"> </a> Prof. Chetan Arora </li>
