--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 <ul> 
 <li> <a href="https://www.linkedin.com/in/suraj-patni/" rel="external nofollow noopener" target="_blank">Suraj Patni</a> (MS Research AI) at <a href="https://home.iitd.ac.in/" rel="external nofollow noopener" target="_blank">IIT-Delhi</a>  with <a href="https://www.cse.iitd.ac.in/~chetan/" rel="external nofollow noopener" target="_blank">Prof. Chetan Arora</a>
 </li>
+  <ul><li> now AI/ML engineer at Qualcomm</li></ul>
 
 <li>
 <a href="https://www.linkedin.com/in/karantanwar/" rel="external nofollow noopener" target="_blank">Karan Tanwar</a> (B.Tech and M.Tech CSE Dual Degree) at <a href="https://home.iitd.ac.in/" rel="external nofollow noopener" target="_blank">IIT-Delhi</a> with <a href="https://www.cse.iitd.ac.in/~chetan/" rel="external nofollow noopener" target="_blank">Prof. Chetan Arora</a> </li>
