--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 <h2 id="news">News</h2>
 <ul> 
-  <li>[2024] Co-organized  <a href="https://3dvss.github.io/" target="_blank"> 3D Vision Summer School 2024</a> at <a href="https://iiitb.ac.in/" rel="external nofollow noopener" target="_blank"> IIIT-Bangalore</a> </li>
+  <li>[2024] Co-organized  <a href="https://3dvss.github.io/" target="_blank"> 3D Vision Summer School 2024</a> and taught <i></i>Text-to-3D Diffusion Models</i> at <a href="https://iiitb.ac.in/" rel="external nofollow noopener" target="_blank"> IIIT-Bangalore</a> </li>
   <li>[2024] Serving Workshop Co-Chair for the <a href="https://www.comsnets.org/cvad_workshop.html" rel="external nofollow noopener" target="_blank"> Connected Vehicles and Autonomous Driving Workshop</a> at <a href="https://www.comsnets.org/" rel="external nofollow noopener" target="_blank"> COMSNETS, 2024</a> </li>
   <li>[2023] One US Patent on 3D Garment Draping on 3D Human Body has been <a href="https://patents.google.com/patent/US11778162B2/" target="_blank"> granted </a>.</li>
   <li>[2023] One paper accepted to <a href="https://CVPR2023.thecvf.com/home" rel="external nofollow noopener" target="_blank"> CVPR, 2023, Deep Learning for Geometric Computing (<b>Oral</b>) </a> </li>
