--- a/publications/index.html
+++ b/publications/index.html
@@ -151,7 +151,7 @@
             <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
             <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
 <!--             <a href="https://drive.google.com/file/d/1nZuJlsQN2OqVXBobNNn336UK8dXNc3nC/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" rel="external nofollow noopener" target="_blank">Demo</a> -->
-            <a href="https://arxiv.org/pdf/2311.11662.pdf" class="btn btn-sm z-depth-0" role="button" rel="external nofollow noopener" target="_blank">PDF</a>
+            <a href="https://openaccess.thecvf.com/content/WACV2025/papers/Sinha_DisFlowEm__One-Shot_Emotional_Talking_Head_Generation_using_Disentangled_Pose_WACV_2025_paper.pdf" class="btn btn-sm z-depth-0" role="button" rel="external nofollow noopener" target="_blank">PDF</a>
           </div>
           
           <div class="badges">
